<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewIme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ime"
                android:gravity="center"
                android:layout_weight="1"
                 />
            <TextView
                android:id="@+id/textViewPrezime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prezime"
                android:gravity="center"
                android:layout_weight="1"
                 />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@android:color/darker_gray"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            >
        </com.google.android.material.divider.MaterialDivider>

        <TextView
            android:id="@+id/textViewDatum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/datum_rodjenja"
            />


        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@android:color/darker_gray"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            >

        </com.google.android.material.divider.MaterialDivider>
        <TextView
            android:id="@+id/textViewPredmet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/predmet"
            />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@android:color/darker_gray"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            >
        </com.google.android.material.divider.MaterialDivider>

        <TextView
            android:id="@+id/textViewProfesor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/profesor"
            />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@android:color/darker_gray"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            >
        </com.google.android.material.divider.MaterialDivider>

        <TextView
            android:id="@+id/textViewGodina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/godina"
            />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@android:color/darker_gray"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            >
        </com.google.android.material.divider.MaterialDivider>

        <TextView
            android:id="@+id/textViewPredavanja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/predavanja"
            />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@android:color/darker_gray"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            >
        </com.google.android.material.divider.MaterialDivider>

        <TextView
            android:id="@+id/textViewVjezbe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/vjezbe"
            />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@android:color/darker_gray"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            >
        </com.google.android.material.divider.MaterialDivider>
    </LinearLayout>


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>