<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/LinearIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >


            <TextView
                android:id="@+id/tvImeL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ime"
                android:layout_weight="0.5"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/tvIme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ime"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/tvPrezimeL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prezime"
                android:layout_weight="0.5"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/tvPrezime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Prezime"
                android:layout_weight="1"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/LinearIP"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/tvPredmetL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/predmet"
                android:gravity="center"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/tvPredmet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Predmet"
                android:gravity="center"

                android:layout_marginTop="5dp"
                />


        </LinearLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>